# pdfMakerInit

./: .gitignore  README.md  build_exe.py  pdfMakerInit.spec  pdf_maker_init.spec  pyproject.toml  setup_dev.sh
src/pdf_maker_init/: main.py
src/pdf_maker_init.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
